<resources>
    <string name="app_name">Factura movil</string>
    <string name="complete_name">Nombre completo</string>
    <string name="identifier">Número identificación</string>
    <string name="user_email">Email</string>
    <string name="password">Contraseña</string>

    <string name="client_type">Tipo cliente</string>
    <string name="client_document">Documento / Ruc</string>
    <string name="client_name">Razón social</string>
    <string name="client_first_name">Primer nombre</string>
    <string name="client_first_last_name">Primer Apellido</string>
    <string name="client_second_name">Segundo nombre</string>
    <string name="client_second_last_name">Segundo apellido</string>
    <string name="client_address">Dirección</string>
    <string name="client_country">País</string>
    <string name="client_city">Ciudad</string>
    <string name="client_telephone">Teléfono</string>
    <string name="client_zone">Zona - sector</string>

    <string name="bar_code">Código de barras</string>
    <string name="item_name">Nombre del artículo</string>
    <string name="cost">Costo</string>
    <string name="price_wholesaler">Precio venta mayorista</string>
    <string name="price_retail">Precio venta minirista</string>
    <string name="commission_percentage">Porcentaje comisión al por menor</string>
    <string name="commission_percentage_wholesale">Procentaje comisión al por mayor</string>
    <string name="stock">Stock existente</string>

    <string name="name_tax">Nombre de impuesto</string>
    <string name="description_tax">Descripción</string>
    <string name="percentage_tax">Porcentaje de impuesto</string>

    <string name="value_drive_unit">Valor de unidad de manejo</string>

    <string name="invoice_number">Número de documento</string>
    <string name="invoice_date">Fecha de venta</string>
    <string name="invoice_quantity">Cantidad</string>
    <string name="invoice_price_unit">Precio unitario</string>
    <string name="invoice_subtotal">Sub total</string>

    <string name="bar_code_select">Código de barras:</string>
    <string name="item_name_select">Nombre del artículo:</string>
    <string name="cost_select">Costo:</string>
    <string name="price_wholesaler_select">Precio venta mayorista:</string>
    <string name="price_retail_select">Precio venta minirista:</string>
    <string name="stock_select">Stock existente:</string>

    <string name="order_date">Fecha de pedido</string>
    <string name="delivery_date">Fecha de entraga</string>

    <string name="begin_date">Fecha inicio</string>
    <string name="end_date">Fecha fin</string>

    <string name="value_transaction">Valor de transacción</string>
    <string name="description_transaction">Concepto de transacción</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_client">Clientes</string>
    <string name="menu_items">Productos</string>
    <string name="menu_invoices">Facturas</string>
    <string name="menu_orders">Pedidos</string>
    <string name="menu_cash">Caja</string>
    <string name="menu_account">Cuentas por cobrar</string>
    <string name="menu_users">Usuario</string>
    <string name="menu_configuration">Configuración</string>
    <string name="menu_exit">Cerrar sesión</string>
</resources>
