<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">
        <TextView
            android:layout_margin="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:drawableLeft="@drawable/ic_list_data"
            android:text="Agregar articulo" />

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_marginLeft="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/bar_code_select"
                android:textColor="#000000"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/lblSelectBarCode"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="395474576485745"
                android:textColor="#000000"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/item_name_select"
                android:textColor="#000000"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/lblSelectNameItem"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="Botellon pet tesalia"
                android:textColor="#000000"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/price_retail_select"
                android:textColor="#000000"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/lblSelectPriceMin"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="454.88"
                android:textColor="#000000"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/price_wholesaler_select"
                android:textColor="#000000"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/lblSelectPriceMay"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="3.45"
                android:textColor="#000000"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/cost_select"
                android:textColor="#000000"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/lblSelectCost"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="543.67"
                android:textColor="#000000"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/stock_select"
                android:textColor="#000000"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/lblSelectStock"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="100"
                android:textColor="#000000"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="Unidades"
                android:textColor="#000000"/>
        </LinearLayout>
        <Spinner
            android:id="@+id/selectDriveUnit"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:spinnerMode="dialog"
            android:background="@drawable/style_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>


        <EditText
            android:id="@+id/txtAddQuantity"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/style_text"
            android:drawablePadding="10dp"
            android:textSize="14dp"
            android:drawableLeft="@drawable/icon_quantity"
            android:hint="@string/invoice_quantity"
            android:textColorHint="#2553A9"
            android:textColor="#27ADA5"
            android:inputType="number" />
        <EditText
            android:id="@+id/txtAddPrice"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/style_text"
            android:drawablePadding="10dp"
            android:textSize="14dp"
            android:drawableLeft="@drawable/icon_price_unit"
            android:hint="@string/invoice_price_unit"
            android:textColorHint="#2553A9"
            android:textColor="#27ADA5"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/txtSubTotal"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/style_text"
            android:drawablePadding="10dp"
            android:textSize="14dp"
            android:drawableLeft="@drawable/icon_sub_total"
            android:enabled="false"
            android:hint="@string/invoice_subtotal"
            android:textColorHint="#2553A9"
            android:textColor="#27ADA5"
            android:inputType="numberDecimal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="bottom">
            <Button
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/btnAddDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Agregar detalle"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/colorPrimaryDark"
                android:textColor="@color/colorWhite"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>